fix figcaption layout breaking issue

--- a/_src/scss/partials/layout.scss
+++ b/_src/scss/partials/layout.scss
@@ -201,4 +201,5 @@ archive li a {
 
 figure {
     margin-bottom: var(--line);
+    max-width: 100%;
 }
